[package]
name = "tree-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
parking_lot = "0.12.4"
tree-editor-macro = { path = "../tree-editor-macro", optional = true }
chashmap = "2.2.2"
regex = "1.11.2"
orx-concurrent-vec = "3.8.0"
rayon = "1.9.3"

[features]
default = ["macros"]
macros = ["tree-editor-macro"]
